switch server to dev

--- a/wallet.env
+++ b/wallet.env
@@ -23,8 +23,8 @@ mongo_db_port="27017"
 
 mongo_db_auth_db=""
 
-# server="dev"
-server="prod"
+server="dev"
+# server="prod"
 
 service_name="wallet"
 
