--- a/wallet.env
+++ b/wallet.env
@@ -7,8 +7,7 @@ service_mode="dev"
 
 db_type = "mongodb"
 
-MONGODB_URI = "mongodb+srv://oluwatosin3:Kewedeola9363@waire.nxjve.mongodb.net/transmed?retryWrites=true&w=majority"
-
+MONGODB_URI = ""
 mongo_db_host="localhost"
 
 # mongo_db_name="wallet"
